# therapeutic_enzyme_engineering_with_generative_neural_networks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
data/: B5LY47.fasta  tr-B5LY47-B5LY47-ECOLX_blast_nr_5000_aligned.fasta  tr-B5LY47-B5LY47-ECOLX_blast_swissprot_100.xml
notebooks/: 01_get_homologous_seqs.ipynb  02_remove_gappy_seqs.ipynb  03_train_and_sample.ipynb  generate_alignment.ipynb  get_homologous_seqs.ipynb  train_and_sample.ipynb
therapeutic_enzyme_engineering_with_generative_neural_networks/: SeqLikeDataset.py  __init__.py  blast_utils.py  gappy_sequences.py  model.py  models.py
