# Reference: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[metadata]
name = therapeutic_enzyme_engineering_with_generative_neural_networks
version = 0.0.1
url = https://bitbucket.org/modernatx/therapeutic_enzyme_engineering_with_generative_neural_networks
maintainer = therapeutic_enzyme_engineering_with_generative_neural_networks
maintainer_email = agiessel@modernatx.com

[options]
packages = find:
include_package_data = True
##### Left behind as a pattern to follow #####
# install_requires =
#     matplotlib
#    pandas
#     torch ==1.10.0+cu113
#     tqdm
#     fair-esm
#     seaborn
# dependency_links = https://download.pytorch.org/whl/cu113/torch_stable.html  # for pytorch-GPU --}}
#####
